--- a/Rust/Cargo.toml
+++ b/Rust/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "imp-cmp"
 version = "0.1.0"
-authors = ["{{authors}}"]
+authors = ["Calibraint"]
 edition = "2018"
 
 [dependencies]
